--- a/libro/SFER.tex
+++ b/libro/SFER.tex
@@ -802,7 +802,7 @@ como del consumo, existirá una probabilidad no nula de que la energía
 requerida por la carga no siempre pueda ser proporcionada por el sistema
 fotovoltaico. De hecho, comprobaremos más adelante que intentar reducir
 esta probabilidad conduce a aumentar indefinidamente el tamaño del
-generador y el acumulador. Por tanto, el diseñador esta nuevamente
+generador y el acumulador. Por tanto, el diseñador está nuevamente
 abocado a una decisión de compromiso entre el coste y la fiabilidad
 del sistema. Es de uso común caracterizar la fiabilidad del sistema
 energético mediante la probabilidad de pérdida de carga (LLP, \emph{Loss
